Fix spacing within CTA group text

--- a/src/scss/_module-cta-group.scss
+++ b/src/scss/_module-cta-group.scss
@@ -50,11 +50,7 @@
 }
 
 .cta-group .cta-text p, .cta-text ul {
-    margin-bottom: 0;
-}
-
-.cta-group .cta-text .button {
-    margin-top: 15px;
+    margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
